@@ -1,0 +1,43 @@
+# Generated by Django 4.1.4 on 2022-12-23 09:32
+
+from django.db import migrations, models
+import taggit.managers
+import wagtail.search.index
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ("taggit", "0005_auto_20220424_2025"),
+        ("searchtests", "0001_initial"),
+    ]
+
+    operations = [
+        migrations.CreateModel(
+            name="UnindexedBook",
+            fields=[
+                (
+                    "id",
+                    models.AutoField(
+                        auto_created=True,
+                        primary_key=True,
+                        serialize=False,
+                        verbose_name="ID",
+                    ),
+                ),
+                ("title", models.CharField(max_length=255)),
+                ("publication_date", models.DateField()),
+                ("number_of_pages", models.IntegerField()),
+                (
+                    "tags",
+                    taggit.managers.TaggableManager(
+                        help_text="A comma-separated list of tags.",
+                        through="taggit.TaggedItem",
+                        to="taggit.Tag",
+                        verbose_name="Tags",
+                    ),
+                ),
+            ],
+            bases=(wagtail.search.index.Indexed, models.Model),
+        ),
+    ]
